--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -1,27 +1,34 @@
 .navWrapper {
     width: 100%;
-    background-color: rgb(105, 105, 105);
+    background: rgb(155, 155, 155);
+    background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
     height: 60px;
 
     .navLink {
         text-decoration: none;
-        margin: 10px;
 
         button {
-            background-color: rgb(105, 105 ,105);
+            background: rgb(155, 155, 155);
+            background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
             color: white;
             height: 60px;
             border-radius: 0px;
             border: 0px;
-            font-size: 20px;
+            font-size: 18px;
+            margin-right: 4px;
+            margin-left: 4px;
             
             &:hover {
-                background-color: rgb(155, 155, 155);
+                background: rgb(140, 140, 140);
+                background: linear-gradient(180deg, rgb(140, 140, 140) 0%, rgb(70, 70, 70) 100%);
+                margin: 4px;
+                height: 52px;
+                border-radius: 4px;
                 cursor: pointer;
             }
 
             &:active {
-                background-color: rgb(105, 105 ,105);
+                background: rgb(105, 105 ,105);
             }
         }
     }
@@ -31,10 +38,11 @@
 
         input {
             position: relative;
-            top: 2px;
-            right: 2px;
-            height: 50px;
+            top: 4px;
+            right: 4px;
+            height: 52px;
             width: 300px;
+            font-size: 20px;
         }
     }
 }
