--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -1,37 +1,101 @@
-.navigation {
+main {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-inline: 2rem;
   text-align: center;
 
-  .navigationWrap {
+  .navigationButtonsWrap {
+    padding: 2rem;
 
-    .prevNextBtn {
-      font-size: 14px;
-      height: 40px;
+    .pageLinesWrap {
+
+      .pageLinesBtn {
+        font-size: 14px;
+        height: 40px;
+        border: 0px;
+        background: rgb(185, 185, 185);
+        background: linear-gradient(180deg, rgb(185, 185, 185) 0%, rgb(105, 105, 105) 100%);
+        color: white;
+  
+        &:hover {
+          background: rgb(175, 175, 175);
+        }
     
-      &:active {
-        background-color: rgb(119, 119, 119)
+        &:active {
+          background: rgb(185, 185, 185);
+          background: linear-gradient(180deg, rgb(185, 185, 185) 0%, rgb(105, 105, 105) 100%);
+          color: white;
+        }
       }
     }
-
-    .currentBtn {
-      font-weight: bold;
-      font-size: 14px;
-      width: 40px;
-      height: 40px;
-      background-color: rgb(119, 119, 119)
-    }
-    
-    .navigationBtn {
-      font-size: 14px;
-      width: 40px;
-      height: 40px;
-      text-align: center;
-    
-      &:active {
-        background-color: rgb(119, 119, 119)
+  
+    .navigationWrap {
+      .prevNextBtn {
+        font-size: 14px;
+        height: 40px;
+        border: 0px;
+        background: rgb(185, 185, 185);
+        background: linear-gradient(180deg, rgb(185, 185, 185) 0%, rgb(105, 105, 105) 100%);
+        color: white;
+      
+        &:hover {
+          background: rgb(175, 175, 175);
+        }
+  
+        &:active {
+          background: rgb(185, 185, 185);
+          background: linear-gradient(180deg, rgb(185, 185, 185) 0%, rgb(105, 105, 105) 100%);
+          color: white;
+        }
       }
+  
+      .currentBtn {
+        font-weight: bold;
+        font-size: 14px;
+        width: 40px;
+        height: 40px;
+        background: rgb(185, 185, 185);
+        background: linear-gradient(0deg, rgb(105, 105, 105) 35%, rgb(185, 185, 185) 100%);
+        color: white;
+        border: 0px;
+      }
+      
+      .navigationBtn {
+        font-size: 14px;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border: 0px;
+        background: rgb(250, 250, 250);
+        background: linear-gradient(180deg, rgb(250, 250, 250) 0%, rgb(200, 200, 200) 100%);
+  
+        &:hover {
+          background: rgb(205, 205, 205);
+          border: 0px;
+        }
+  
+        &:active {
+          background: rgb(250, 250, 250);
+          background: linear-gradient(180deg, rgb(250, 250, 250) 0%, rgb(200, 200, 200) 100%);
+        }
+      }
+    }
+  }
+}
+
+#listDescription {
+  .name {
+    font-weight: lighter;
+  }
+
+  &:hover {
+    p {
+      font-size: 16px;
+      color: white;
+    }
+
+    .image {
+      width: 48px;
     }
   }
 }
