--- a/src/styles/Pokemon.scss
+++ b/src/styles/Pokemon.scss
@@ -1,8 +1,14 @@
 //list of pokemon
 .listWrapper {
+  
     .divWrapper {
       display: flex;
       align-items: center;
+
+      * {
+        margin-inline: 3%;
+        font-size: 16px;
+      }
   
       &:hover {
         .image {
@@ -10,20 +16,59 @@
         }
   
         p {
-          font-size: 32px;
+          font-size: 22px;
         }
       }
-  
+      
+      .index {
+        width: 50px;
+      }
+
       .image {
         width: 48px;
       }
       
       .name {
         font-weight: bold;
+        width: 140px;
     
         &:hover {
           color: rgb(150, 150, 150);
         }
+      }
+
+      .experience {
+        width: 50px;
+      }
+      
+      .type {
+        width: 30px;
+
+        * {
+          display: inline;
+          margin-right: 12px;
+          background-color: black;
+          padding-block: 2px;
+        }
+
+        .normal { background-color: #A8A878; }
+        .fire { background-color: #F08030; }
+        .water { background-color: #6890F0; }
+        .grass { background-color: #78C850; }
+        .electric { background-color: #F8D030; }
+        .ice { background-color: #98D8D8; }
+        .fighting { background-color: #C03028; }
+        .poison { background-color: #A040A0; }
+        .ground { background-color: #E0C068; }
+        .flying { background-color: #A890F0; }
+        .psychic { background-color: #F85888; }
+        .bug { background-color: #A8B820; }
+        .rock { background-color: #B8A858; }
+        .ghost { background-color: #705898; }
+        .dragon { background-color: #7038F8; }
+        .dark { background-color: #705848; }
+        .steel { background-color: #B8B8D0; }
+        .fairy { background-color: #EE99AC; }
       }
     }
   }
@@ -75,6 +120,25 @@
           margin-right: 10px;
           display: flex;
         }
+
+        .normal { background-color: #A8A878; }
+        .fire { background-color: #F08030; }
+        .water { background-color: #6890F0; }
+        .grass { background-color: #78C850; }
+        .electric { background-color: #F8D030; }
+        .ice { background-color: #98D8D8; }
+        .fighting { background-color: #C03028; }
+        .poison { background-color: #A040A0; }
+        .ground { background-color: #E0C068; }
+        .flying { background-color: #A890F0; }
+        .psychic { background-color: #F85888; }
+        .bug { background-color: #A8B820; }
+        .rock { background-color: #B8A858; }
+        .ghost { background-color: #705898; }
+        .dragon { background-color: #7038F8; }
+        .dark { background-color: #705848; }
+        .steel { background-color: #B8B8D0; }
+        .fairy { background-color: #EE99AC; }
       }
 
       .sprite {
@@ -83,84 +147,6 @@
         bottom: 60%;
       }
 
-      .viewBtn {
-        position: absolute;
-        bottom: 42%;
-        left: 200px;
-        width: 94px;
-      }
-      
-      .artBtn {
-        position: absolute;
-        bottom: 30%;
-        left: 200px;
-        width: 94px;
-      }
-      
-      .addToCart {
-        position: absolute;
-        bottom: 30%;
-        left: 300px;
-        height: 49px;
-        width: 90px;
-      }
-    }
-  }
-
-  //details of pokemon
-.detailsWrapper {
-    position: relative;
-    top: 50%;
-    left: 10%;
-    translate: -10% -0%;
-    text-align: left;
-    height: 300px;
-  
-    .detailsWrapper p {
-      background-color: rgba(0, 0, 0, 0.6);
-      margin: 2px;
-      padding-top: 2px;
-      padding-bottom: 2px;
-      display: inline-block;
-    }
-  
-    .artwork {
-      margin-left: 10%;
-      height: 290px;
-    }
-  
-    .backToInfoBtn {
-      position: absolute;
-      bottom: 10%;
-      left: 0%;
-      height: 42px;
-    }
-  
-    .infoWrapper {
-      text-align: left;
-      position: absolute;
-      top: 10%;
-      left: 0%;
-  
-      .returnButton {
-        height: 42px;
-      }
-  
-      .typeList {
-        display: flex;
-  
-        .types {
-          margin-right: 10px;
-          display: flex;
-        }
-      }
-  
-      .sprite {
-        position: fixed;
-        left: 250px;
-        bottom: 60%;
-      }
-  
       .viewBtn {
         position: absolute;
         bottom: 42%;
