--- a/src/styles/Title.scss
+++ b/src/styles/Title.scss
@@ -1,8 +1,9 @@
 .title {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% -50%);
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-inline: 2rem;
+    text-align: center;
+    font-size: 20px;
 
     .pokeball {
         margin-left: -12px;
@@ -15,7 +16,7 @@
         border: 6px solid black;
         background-color: white;
         overflow: hidden;
-        bottom: -16px;
+        bottom: -20px;
 
         &::before {
             content: "";
@@ -23,6 +24,7 @@
             background-color: red;
             width: 100%;
             height: 50%;
+            left: 0px;
         }
 
         .pokeballLine {
@@ -46,7 +48,7 @@
             &::after {
                 content:"";
                 position: absolute;
-                background-color: white;
+                background-color: rgb(250, 250, 250);
                 width: 16px;
                 height: 16px;
                 border-radius: 16px;
