--- a/src/styles/Pokemon.scss
+++ b/src/styles/Pokemon.scss
@@ -1,12 +1,13 @@
 //list of pokemon
 .listWrapper {
-  
+    
     .divWrapper {
       display: flex;
       align-items: center;
+      justify-content: center;
 
       * {
-        margin-inline: 3%;
+        margin-inline: 4%;
         font-size: 16px;
       }
   
@@ -21,7 +22,7 @@
       }
       
       .index {
-        width: 50px;
+        width: 10px;
       }
 
       .image {
@@ -30,7 +31,7 @@
       
       .name {
         font-weight: bold;
-        width: 140px;
+        width: 130px;
     
         &:hover {
           color: rgb(150, 150, 150);
@@ -38,15 +39,17 @@
       }
 
       .experience {
-        width: 50px;
+        width: 30px;
       }
       
       .type {
-        width: 30px;
+        width: 60px;
+        display: flex;
+        justify-content: center;
 
         * {
           display: inline;
-          margin-right: 12px;
+          margin-right: 4px;
           background-color: black;
           padding-block: 2px;
         }
@@ -70,6 +73,10 @@
         .steel { background-color: #B8B8D0; }
         .fairy { background-color: #EE99AC; }
       }
+
+      .price {
+        width: 30px;
+      }
     }
   }
 
@@ -82,6 +89,8 @@
     translate: -10% -0%;
     text-align: left;
     height: 300px;
+    display: flex;
+    justify-content: center;
 
     p {
       background-color: rgba(0, 0, 0, 0.6);
@@ -168,5 +177,22 @@
         height: 49px;
         width: 90px;
       }
+
+      .detailsPrice {
+        position: absolute;
+        bottom: 30%;
+        left: 396px;
+        font-size: 40px;
+        background: none;
+        color: rgb(50, 250, 50);
+      }
     }
   }
+
+
+//list header
+#listHeader {
+  display: flex;
+  justify-content: center;
+
+}
