--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -2,38 +2,47 @@
 .cartWrapper {
     position: absolute;
     right: 50px;
+    cursor: pointer;
 
-    .cartButton {
-        background-color: rgb(50, 200, 50);
-        width: 50px;
-        height: 50px;
-        border-radius: 5px;
-        border: none;
+    .fa-cart-shopping {
+        height: 30px;
+        color: white;
+    }
+
+    &:hover {
         .fa-cart-shopping {
-            height: 30px;
-        }
-
-        &:hover {
-            background-color: rgb(0, 255, 0);
-        }
-
-        &:active {
-            background-color: white;
-            .fa-cart-shopping {
-                color: rgb(50, 200, 50)
-            }
+            color: rgb(50, 250, 50)
         }
     }
 
-    .itemQty {
-        position: absolute;
-        right: 2px;
-        bottom: -25px;
+    &:active {
+        .fa-cart-shopping {
+            color: white;
+        }
+    }
 
-        font-size: 22px;
-        font-weight: bold;
-        color: red;
-        text-shadow: black 0px 0px 1px, black 0px 0px 1px, black 0px 0px 1px, black 0px 0px 1px, black 0px 0px 1px, black 0px 0px 1px;
-        -webkit-font-smoothing: antialiased;
+    .cartLink {
+        text-decoration: none;
+    }
+
+    .circleQty {
+        width: 18px;
+        height: 18px;
+        border-radius: 100%;
+        position: relative;
+        top: -60px;
+        left: 32px;
+        background: rgb(50, 250, 50);
+        
+
+        .itemQty {
+            font-size: 18px;
+            font-weight: bold;
+            color: black;
+        }
+    }
+
+    .hide {
+        display: none;
     }
 }
