--- a/src/styles/MyCart.scss
+++ b/src/styles/MyCart.scss
@@ -78,7 +78,7 @@
                 width: 20%;
 
                 .deleteItem {
-                    display: flex;
+                    display: inline-flex;
                     align-items: center;
                     background: rgb(220, 220, 220);
                     color: black;
