--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -1,48 +1,75 @@
 .navWrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
     width: 100%;
     background: rgb(155, 155, 155);
     background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
     height: 60px;
 
-    .navLink {
-        text-decoration: none;
+    .buttonWrapper {
+        display: flex;
+        flex-wrap: nowrap;
+        width: 60%;
 
-        button {
-            background: rgb(155, 155, 155);
-            background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
-            color: white;
-            height: 60px;
-            border-radius: 0px;
-            border: 0px;
-            font-size: 18px;
-            margin-right: 4px;
-            margin-left: 4px;
+        .navLink {
+            text-decoration: none;
             
-            &:hover {
-                background: rgb(140, 140, 140);
-                background: linear-gradient(180deg, rgb(140, 140, 140) 0%, rgb(70, 70, 70) 100%);
-                margin: 4px;
-                height: 52px;
-                border-radius: 4px;
-                cursor: pointer;
-            }
-
-            &:active {
-                background: rgb(105, 105 ,105);
+            button {
+                background: rgb(155, 155, 155);
+                background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
+                color: white;
+                height: 60px;
+                border-radius: 0px;
+                border: 0px;
+                font-size: 18px;
+                margin-inline: 4px;
+                
+                &:hover {
+                    background: rgb(140, 140, 140);
+                    background: linear-gradient(180deg, rgb(140, 140, 140) 0%, rgb(70, 70, 70) 100%);
+                    margin: 4px;
+                    height: 52px;
+                    border-radius: 4px;
+                    cursor: pointer;
+                }
+    
+                &:active {
+                    background: rgb(105, 105 ,105);
+                }
             }
         }
     }
 
     .searchBar {
-        float: right;
+        display: flex;
+        flex: 1;
+        width: 40%;
 
         input {
-            position: relative;
-            top: 4px;
-            right: 4px;
-            height: 52px;
-            width: 300px;
+            display: flex;
+            flex: 1;
+            width: 40%;
             font-size: 20px;
         }
     }
+
+    .searchResult {
+        width: 40%;
+        top: 60px;
+        right: 0px;
+
+        position: absolute;
+        background: white;
+        color: black;
+        height: 60px;
+        font-size: 20px;
+
+        .searchBox {
+            display: flex;
+            height: 60px;
+        }
+    }
 }
+
