--- a/src/styles/indexHome.scss
+++ b/src/styles/indexHome.scss
@@ -16,7 +16,7 @@
             color: black;
             border-radius: 5px;
             margin: 1rem;
-            flex: 1 1 200px;
+            flex: 200px;
             display: flex;
             justify-content: center;
             align-items: center;
