--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -6,7 +6,6 @@
 
     .firstSection {
         margin: 1rem;
-
         display: flex;
         flex-wrap: nowrap;
 
@@ -20,7 +19,7 @@
     
         .itemBuy {
             width: 50%;
-            border: 1px solid rgb(50, 50, 50);
+            border-left: 1px solid rgb(50, 50, 50);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -50,12 +49,16 @@
                     width: 66px;
                     height: 22px;
                     border-radius: 22px;
+
+                    &:hover {
+                        background: rgb(255, 255, 255);
+                    }
     
                     .itemQtyBtn {
                         border: 0;
                         background: 0;
                         width: 23px;
-                        height: 23px;
+                        height: 22px;
                         border-radius: 23px;
     
                         &:hover {
@@ -65,7 +68,6 @@
                         &:active {
                             background: rgb(100, 100, 100);
                             color: white;
-                            border: 2px solid rgb(100, 100, 100);
                         }
                     }
                 }
@@ -73,21 +75,23 @@
             
             .itemBuyButtons {
                 button {
+                    margin-top: 2px;
                     display: block;
                     width: 300px;
                     height: 60px;
                     border-radius: 5px;
                     background: rgb(220, 220, 220);
                     color: black;
+                    border: 0;
                     
                     &:hover {
                         cursor: pointer;
+                        background: rgb(255, 255, 255);
                     }
 
                     &:active {
                         background: rgb(100, 100, 100);
                         color: white;
-                        border: 2px solid rgb(100, 100, 100);
                     }
                 }
             }
@@ -96,6 +100,58 @@
     
 
     .itemDescription {
+        margin: 2rem;
         width: 1280px;
+
+        .itemDescName {
+            font-size: 30px;
+        }
+
+        .itemDescType {
+            display: flex;
+            p {
+                margin-right: 4px;
+            }
+        }
+
+        .itemDescAbilities {
+            display: flex;
+        }
+
+        .itemDescStats {
+            display: flex;
+
+            .itemDescStatsTable {
+                .itemDescStatsHead {
+                    
+                    border-bottom: 1px solid rgb(50, 50, 50);
+                    height: 40px;
+
+                    th {
+                        border-right: 1px solid rgb(50, 50, 50);
+
+                        &:last-child {
+                            border: 0;
+                        }
+                    }
+                }
+    
+                .itemDescStatsBody {
+                    height: 40px;
+                    td {
+                        width:10%;
+                        text-align: center;
+                        border-right: 1px solid rgb(50, 50, 50);
+
+                        &:last-child {
+                            border: 0;
+                        }
+                    }
+    
+                }
+            }
+
+        }
+
     }
 }
