--- a/src/styles/Item.scss
+++ b/src/styles/Item.scss
@@ -3,6 +3,7 @@
     max-width: 1080px;
     background: rgb(50, 50, 50);
     border-inline: 1px solid rgb(80, 80, 80);
+    overflow: hidden;
     
 
     .firstSection {
