--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -1,4 +1,3 @@
-
 .cartWrapper {
     width: 60px;
     margin: 4px;
@@ -45,7 +44,7 @@
         .itemQty {
             font-size: 16px;
             font-weight: bold;
-            color: white
+            color: white;
         }
     }
 
