--- a/src/styles/Title.scss
+++ b/src/styles/Title.scss
@@ -5,6 +5,8 @@
     text-align: center;
     font-size: 20px;
 
+    h1 { color: black; }
+
     .pokeball {
         margin-left: -12px;
         margin-right: -12px;
