--- a/src/styles/AllPokemon.scss
+++ b/src/styles/AllPokemon.scss
@@ -7,9 +7,9 @@
         min-width: 280px;
         max-width: 280px;
         height: 380px;
-        color: white;
+        color: black;
         border-radius: 5px;
-        background: rgb(50, 50, 50);
+        background: rgb(240, 240, 240);
         margin: 1rem;
         flex: 280px;
         display: flex;
@@ -18,9 +18,10 @@
 
         img {
             width: 280px;
+            height: 280px;
             position: absolute;
             margin-bottom: 100px;
-            border-bottom: 1px solid rgb(80, 80, 80);
+            border-bottom: 1px solid rgb(200, 200, 200);
         }
 
         .pokeBoxColor {
@@ -38,7 +39,7 @@
             margin-top: 240px;
             margin-left: 10px;
             position: absolute;
-            color: white;
+            color: black;
         }
 
         .pokeBoxPrice {
