--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -4,9 +4,10 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     width: 100%;
-    background: rgb(155, 155, 155);
-    background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
+    background: rgb(240, 240, 240);
+    background: linear-gradient(180deg, rgb(240, 240, 240) 0%, rgb(200, 200, 200) 100%);
     height: 60px;
+    border: 1px solid rgb(200, 200, 200);
 
     .buttonWrapper {
         display: flex;
@@ -17,9 +18,9 @@
             text-decoration: none;
             
             button {
-                background: rgb(155, 155, 155);
-                background: linear-gradient(180deg, rgb(155, 155, 155) 0%, rgb(85, 85, 85) 100%);
-                color: white;
+                background: rgb(240, 240, 240);
+                background: linear-gradient(180deg, rgb(240, 240, 240) 0%, rgb(200, 200, 200) 100%);
+                color: black;
                 height: 60px;
                 border-radius: 0px;
                 border: 0px;
@@ -27,8 +28,8 @@
                 margin-inline: 4px;
                 
                 &:hover {
-                    background: rgb(140, 140, 140);
-                    background: linear-gradient(180deg, rgb(140, 140, 140) 0%, rgb(70, 70, 70) 100%);
+                    background: rgb(230, 230, 230);
+                    background: linear-gradient(180deg, rgb(230, 230, 230) 0%, rgb(190, 190, 190) 100%);
                     margin: 4px;
                     height: 52px;
                     border-radius: 4px;
@@ -36,7 +37,7 @@
                 }
     
                 &:active {
-                    background: rgb(105, 105 ,105);
+                    background: rgb(200, 200 ,200);
                 }
             }
         }
@@ -65,6 +66,8 @@
         color: black;
         height: 60px;
         font-size: 20px;
+
+        border: 1px solid rgb(200, 200, 200);
 
         .searchBox {
             display: flex;
