--- a/src/styles/Pokemon.scss
+++ b/src/styles/Pokemon.scss
@@ -73,7 +73,7 @@
     align-items: center;
 
     p {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgb(240, 240, 240);
       margin: 2px;
       padding-top: 2px;
       padding-bottom: 2px;
@@ -143,7 +143,7 @@
         left: 396px;
         font-size: 40px;
         background: none;
-        color: rgb(50, 250, 50);
+        color: black;
       }
     }
   }
