--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-  background-color: #242424;
-  color: white;
+  background-color: white;
+  color: black;
   font-family: sans-serif;
 }
 
