--- a/src/styles/indexHome.scss
+++ b/src/styles/indexHome.scss
@@ -10,9 +10,10 @@
         align-items: center;
         width: 300%;
         height: 200px;
-        background: rgb(100, 100, 100);
+        background: rgb(240, 240, 240);
+        border: 1px solid rgb(200, 200, 200);
 
-        animation: slideTransition 6s infinite;
+        animation: slideTransition 12s infinite;
 
         .slideBox {
             display: flex;
@@ -65,7 +66,8 @@
             min-width: 200px;
             max-width: 200px;
             height: 300px;
-            background: rgb(150, 150, 150);
+            background: rgb(240, 240, 240);
+            border: 1px solid rgb(200, 200, 200);
             color: black;
             border-radius: 5px;
             margin: 1rem;
@@ -77,7 +79,8 @@
 
         #boxOne {
             display: inline-block;
-            background: white;
+            background: rgb(240, 240, 240);
+            border: 1px solid rgb(200, 200, 200);
             
             img {
                 width: 200px;
